[package]
name = "const-if"
version = "0.1.3"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"
description = "This crate adds if-else expression into your constant functions"
keywords = ["const","const-fn","const-if"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/playXE/const-if"
[dependencies]
